# rf-detr-to-coreml

./: .gitignore  CLAUDE.md  LICENSE  README.md  benchmark_base.py  compare_bird_photos.py  export_coreml.py  pyproject.toml  requirements.txt
rfdetr_coreml/: __init__.py  cli.py  coreml_fixes.py  export.py  patches.py
scripts/: _export_onnx_raw.py  benchmark.py  benchmark_latency.py  benchmark_onnx.py  test_batch2.py  test_batch2_gpu.py  test_export.py  test_fp16.py  validate_coreml.swift
