[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rfdetr-coreml"
version = "0.1.0"
description = "Export RF-DETR object detection models to Apple CoreML format"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Xuan Chen" },
]
dependencies = [
    "torch>=2.4.0",
    "coremltools>=8.0",
    "rfdetr>=1.5.0",
]

[project.scripts]
rfdetr-coreml = "rfdetr_coreml.cli:main"

[project.urls]
Homepage = "https://github.com/landchenxuan/rf-dert-to-coreml"

[tool.setuptools.packages.find]
include = ["rfdetr_coreml*"]
